--- a/BeaconTest/BeaconTest/Info.plist
+++ b/BeaconTest/BeaconTest/Info.plist
@@ -64,6 +64,8 @@
 	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Enable location services to use this app.</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Enable bluetooth to use this app.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Enable location services to use this app. </string>
 </dict>
